[gd_scene load_steps=9 format=2]

[ext_resource path="res://player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://rock.tscn" type="PackedScene" id=3]
[ext_resource path="res://background.tscn" type="PackedScene" id=4]
[ext_resource path="res://GUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://touchControls.tscn" type="PackedScene" id=6]
[ext_resource path="res://powerup.tscn" type="PackedScene" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1024, 0, 0, 0, 0, 0, 1344, 0, 0, 0, 0, 0, 1344, 600, 0, 0, 0, 0, 1024, 600, 0, 0, 0, 0, 1024, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 2 )
rock = ExtResource( 3 )
powerup = ExtResource( 7 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 4 )]

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="scoreTimer" type="Timer" parent="."]

[node name="startTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="startPosition" type="Position2D" parent="."]
position = Vector2( 100, 325 )

[node name="planetBloom" type="Path2D" parent="."]
position = Vector2( 409.6, 0 )
scale = Vector2( 0.6, 0.92 )
curve = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="planetBloomLoc" type="PathFollow2D" parent="planetBloom"]
position = Vector2( 1024, 0 )

[node name="planetAddTimer" type="Timer" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="GUI" parent="." instance=ExtResource( 5 )]

[node name="Sprite" type="Sprite" parent="."]

[node name="touchControls" parent="." instance=ExtResource( 6 )]

[node name="powerupAddTimer" type="Timer" parent="."]
wait_time = 4.0

[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="updateBoost" from="Player" to="." method="_on_Player_updateBoost"]
[connection signal="timeout" from="scoreTimer" to="." method="_on_scoreTimer_timeout"]
[connection signal="timeout" from="startTimer" to="." method="_on_startTimer_timeout"]
[connection signal="timeout" from="planetAddTimer" to="." method="_on_planetAddTimer_timeout"]
[connection signal="start_game" from="GUI" to="." method="new_game"]
[connection signal="start_game" from="GUI" to="." method="_on_GUI_start_game"]
[connection signal="timeout" from="powerupAddTimer" to="." method="_on_powerupAddTimer_timeout"]
